package at.qe.skeleton.model;

public interface CardInterface {
}
