package at.qe.skeleton.model;

public interface DeckInterface {
}
