package at.qe.skeleton.model;

public enum DeckStatus {
    PRIVATE, PUBLIC, LOCKED
}
