package at.qe.skeleton.model;

/**
 * Enumeration of available user roles.
 * <p>
 * This class is part of the skeleton project provided for students of the
 * courses "Software Architecture" and "Software Engineering" offered by the
 * University of Innsbruck.
 */
public enum UserRole {
    
    ADMIN,
    LEARNER
    
}
