@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

interface AbstractRepository<T, ID> << interface >>
class AdminController
class Card
interface CardInterface << interface >>
interface CardRepository << interface >>
class Deck
class DeckBean
class DeckDetailController
interface DeckInterface << interface >>
class DeckListController
interface DeckRepository << interface >>
class DeckService
enum DeckStatus << enumeration >>
class EmailSenderService
class LearnController
class LearnService
interface MessageSenderService << interface >>
class SessionInfoBean
class User
class UserBean
class UserBookmarkController
class UserCardInfo
class UserCardInfoID
interface UserCardInfoRepository << interface >>
class UserDetailController
class UserListController
interface UserRepository << interface >>
enum UserRole << enumeration >>
class UserService

AdminController                 ->  DeckService                     
AdminController                  ->  UserService                     
Card                             --^  CardInterface                   
Card                             ->  Deck
Card                             ->  UserCardInfo                    
CardRepository                   --^  AbstractRepository              
Deck                             ->  Card
Deck                             --^  DeckInterface                   
Deck                             ->  DeckStatus                      
Deck                             ->  User                            
DeckBean                         ->  Deck                            
DeckBean                         ->  DeckService                     
DeckBean                         ->  SessionInfoBean                 
DeckBean                         ->  UserService                     
DeckDetailController             ->  Card                            
DeckDetailController             -->  Card
DeckDetailController             -->  Deck
DeckDetailController             ->  Deck
DeckDetailController             ->  DeckService
DeckDetailController             ->  SessionInfoBean                 
DeckDetailController             ->  UserService                     
DeckListController               ->  DeckService
DeckListController               ->  SessionInfoBean                 
DeckRepository                   --^  AbstractRepository
DeckService                      ->  CardRepository
DeckService                      ->  DeckRepository
DeckService                      ->  MessageSenderService
DeckService                      ->  SessionInfoBean                 
DeckService                      ->  UserService                     
EmailSenderService               --^  MessageSenderService            
LearnController                  ->  Card
LearnController                  ->  LearnService
LearnController                  ->  SessionInfoBean                 
LearnController                  ->  User
LearnService                     -->  UserCardInfo
LearnService                     ->  UserCardInfoRepository
SessionInfoBean                  ->  User
SessionInfoBean                  ->  UserService                     
User                             ->  Deck
User                             ->  UserCardInfo
User                             ->  UserRole
UserBean                         ->  AdminController
UserBean                         ->  User
UserBean                         -->  User
UserBookmarkController           ->  SessionInfoBean                 
UserBookmarkController           ->  UserService                     
UserCardInfo                     ->  Card
UserCardInfo                     ->  User
UserCardInfo                     ->  UserCardInfoID
UserCardInfoRepository           --^  AbstractRepository
UserDetailController             ->  AdminController
UserDetailController             ->  User
UserDetailController             ->  UserService                     
UserListController               ->  UserService                     
UserRepository                   --^  AbstractRepository
UserService                      -->  User
UserService                      ->  UserRepository
@enduml
